tests/errors/switch_nonscalar_case.ki
switch 1:
    case [1, 2]:
        discard 0
